cabal-version:   3.8

name:           bluefin-log-base
version:        0.0.0.1
license-file:   LICENSE
build-type:     Simple

library
  hs-source-dirs:
      src
  exposed-modules:
    , Bluefin.Log
  build-depends:
      aeson
    , base >=4.7 && <5
    , bluefin >= 0.0.9
    , text
    , time
    , log-base
  default-language: GHC2021
  default-extensions:
      LambdaCase
    , BlockArguments
    , OverloadedStrings
    , ImportQualifiedPost
    , InstanceSigs
    , LambdaCase

common warning-opts
    ghc-options: -fwarn-incomplete-patterns
